--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "order-system-with-test-actors",
   "version": "1.0.0",
-  "main": "baseline.js",
+  "type": "module",
+  "main": "src/baseline.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,8 +11,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "eslint": "^9.13.0",
     "prettier": "^3.3.3",
-    "prettier-eslint": "^16.3.0"
+    "typescript": "^5.6.3"
   }
 }
