--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "prettier": "^3.3.3",
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "uuid": "^11.0.2"
   }
 }
