--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "pino": "^9.5.0",
+    "pino-pretty": "^11.3.0",
     "uuid": "^11.0.2"
   }
 }
