--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/node": "^22.8.4",
     "prettier": "^3.3.3",
     "typescript": "^5.6.3"
   },
